# Line_Chat_Message_Backup

./: .gitignore  .gitmodules  CMakeLists.txt  Git 版本控制系統的掛勾程式(hook)  README.md  測試用資料  程式碼風格設定檔  運行時期紀錄檔
3rd party software/: README.md
3rd party software/Android Backup Extractor(dragomerlin's fork)/: README.TXT  VERSION.TXT
Android Backups/: .gitignore  README.markdown
Build solutions/: CMake 軟體建構系統  CodeLite 整合式開發環境  Code__Blocks 整合式開發環境  Eclipse CDT 整合式開發環境  Eclipse JDT 整合式開發環境  GNU Make 軟體建構系統  Geany 整合式開發環境  README.md  傳統批次命令
Build solutions/CMake buildsystem/: .gitignore  README.md  軟體建構中間產物
Build solutions/CMake buildsystem/Build artifacts/: README.md
Build solutions/CMake buildsystem/Built software/: .gitignore  README.md
Build solutions/CodeLite IDE/: .gitignore  Line Chat Message Backup.project
Build solutions/Code__Blocks IDE/: .gitignore  Line Chat Message Backup.cbp  README.md
Build solutions/Code__Blocks IDE/Debug/: README.md
Build solutions/Eclipse CDT IDE/: .cproject  .gitignore  .project  README.md  執行設定檔
Build solutions/Eclipse JDT IDE/: .classpath  .gitignore  .project  .外部工具建構器  README.md
Build solutions/GNU Make buildsystem/: Makefile  README.md
Build solutions/Geany IDE/: .gitignore  Line Chat Message Backup.geany  建構好的軟體
Build solutions/Traditional batch commands/: README.md
Coding style configurations/: .gitignore  Project_specified_coding_style.astylerc  README.md
Coding style configurations/Conventions/: README.md
Documentation/: README.md  應用程式介面(API)說明文件
Documentation/Application Programming Interface(API) documentation/: README.md
Documentation/原始未移植前軟體/: .gitignore  1.A手機備份資料.bat  2.B手機還原資料.bat  3.B手機免root清除重登.bat  README.md  db.list  setting.tar  v3更新.txt  v5更新.txt  重要-請先看此說明.txt
Git hooks/: Astyle_before_commit.precommit.sh  README.md
LINE data workspace/: .gitignore  README.markdown
Libraries/: .gitignore  README.md
Library headers/: .gitignore  README.md
Resources/: README.md
Resources/Translations/: README.md
Runtime logs/: README.markdown
Source code/: .gitignore  1.A手機備份資料.bash.sh  2.B手機還原資料.bash.sh  3.B手機免root清除重登.sh  CMakeLists.txt  Main_program.java  README.md  main.cpp  main.hpp  共用程式碼.source.bash.sh
Source code/Project_specific_configurations/: Debug.h  GNU_gettext_library.h  Math.h  Max_value.h
Templates/: README.md
Templates/Build_artifacts/: README.md
Templates/README/: Directory.template.README.md  README.md
Testing data/: .gitignore  README.markdown
Tools/: .gitignore  README.md  acquireRequiredLibrary.bash.sh  checkIllegalUsage.bash.source.sh  convertSourceCodeToUTF-8withBOM.bash.sh  convertSourceCodeToUTF-8withoutBOM.bash.sh  initializeProject.bash.sh  installProjectGitHooks.bash.sh  renameProject.bash.sh  switchCodingStyle.bash.sh
(+30 files in other folders)
